Added DTOs,DATA, Files and Cosmos DB Updated UI added unit test

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
 
+
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Capital Placement .Net8 ASP.NET Core Web Application</p>
+        <p> <a href="https://localhost:8081/api/controller/">Test Api Here </a>.</p>
+        <p><h2>Site Under Development Mode.</h2></p>
+
+        <div class="d-auto justify-content-center">
+            <a class="btn btn-outline-primary d-auto justify-content-center text align-content-center " style="width: 200px; height: 200px;" asp-area="" asp-controller="Home" asp-action="Application">Candidate Application</a>
+            <a class="btn btn-outline-danger d-auto justify-content-center text align-content-center " style="width: 200px; height: 200px;" asp-area="" asp-controller="Home" asp-action="Privacy">Employee Sample System</a>
+        </div>
+    </div>
+
+
+
+
+    
